force-app/main/default/objects/Species__c/fields/Harvesting_After_Months__c.field-meta.xml
<CustomField>
    <fullName>Harvesting_After_Months__c</fullName>
    <label>Harvesting After Months</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>