force-app/main/default/objects/Species__c/fields/Light__c.field-meta.xml
<CustomField>
    <fullName>Light__c</fullName>
    <label>Light</label>
    <length>100</length>
    <type>Text</type>
</CustomField>