force-app/main/default/objects/Species__c/fields/Month_of_Pruning__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Pruning__c</fullName>
    <label>Month of Pruning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>