force-app/main/default/objects/Species__c/fields/Planting__c.field-meta.xml
<CustomField>
    <fullName>Planting__c</fullName>
    <label>Planting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>