force-app/main/default/objects/Species__c/fields/Planting_Distance__c.field-meta.xml
<CustomField>
    <fullName>Planting_Distance__c</fullName>
    <label>Planting Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>