force-app/main/default/objects/Species__c/fields/Propagation__c.field-meta.xml
<CustomField>
    <fullName>Propagation__c</fullName>
    <label>Propagation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>