force-app/main/default/objects/Species__c/fields/Summer_Fertilization_Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Summer_Fertilization_Frecuency__c</fullName>
    <label>Summer Fertilization Frecuency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>