force-app/main/default/objects/Species__c/fields/Summer_Watering_Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Summer_Watering_Frecuency__c</fullName>
    <label>Summer Watering Frecuency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>