force-app/main/default/objects/Species__c/fields/Winter_Fertilization_Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Winter_Fertilization_Frecuency__c</fullName>
    <label>Winter Fertilization Frecuency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>